# ShivaVG

./: CMakeLists.txt
src/: CMakeLists.txt  Config.cmake.in
